k8s/peer-auth.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: secure-apps
spec:
  mtls:
    mode: STRICT
