k8s/flask-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: secure-apps
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: asifdroid63/flask-app-1:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: secure-apps
  labels:
    app: flask-app
spec:
  selector:
    app: flask-app
  ports:
  - name: http
    port: 80
    targetPort: 5000
