k8s/flask-app2-deployment-def.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-2
  # namespace: secure-apps
  labels:
    app: flask-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app-2
  template:
    metadata:
      labels:
        app: flask-app-2
    spec:
      containers:
      - name: flask-app-2
        image: asifdroid63/flask-app-2:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-2
  # namespace: secure-apps
spec:
  selector:
    app: flask-app-2
  ports:
  - port: 5001
    targetPort: 5001
